[#155] Update plugin for IntelliJ 2025.2
- Scala plugin 2025.2.16
- Gherkin plugin 252.23892.201
- cucumber-scala 8.31.0
- cucumber-junit 7.27.0